FPLA-821: Uploading placement application notification tests